# m2m_bible_mt

./: .gitignore  README.md  conversation_with_claude.txt  project-brief.md  pyproject.toml  spec-vref.md  spec.md  todo.md
configs/: holdouts-ie-shareable.yaml  holdouts-ie.yaml  holdouts-smoke.yaml  holdouts.yaml  language_families.csv  nllb_lang_map.csv  passages.yaml
configs/experiments/: ie_base.yaml  ie_base_m2m.yaml  ie_base_shareable.yaml  nllb_ie.yaml  nllb_smoke.yaml  pilot.yaml  smoke.yaml  smoke_m2m.yaml
configs/families/: indo_european.csv
experiments/: alignment-setup.md  clearml-agent-issue.md  dev-3090-setup.md  extended-holdouts-proposal.md  greek-source-coverage.md  ie-base-m2m-results.md  ie-base-results.md  ie-base-shareable-results.md  m2o-alignment-comparison.md  m2o-alignment-eflomal.csv  m2o-alignment.csv  m2o-bracketing-lr.csv  m2o-bracketing-results.csv  m2o-bracketing.md  m2o-matrix-results.csv  m2o-matrix-results.md  m2o-results.csv  m2o-valid-vrefs.txt  nllb-ie-results.md  selection-ie-shareable.csv  selection-ie.csv  selection-pilot.csv  selection-smoke.csv  vref-encoding-results.md  vref-train-manifest.txt
scripts/alignment/: eflomal_score.py  run_eflomal.py  run_ibm1.py
src/samileides/: __init__.py  align_score.py  canon.py  config.py  data.py  data_pipeline.py  dataset.py  evaluate.py  family.py  fetch.py  generate.py  greek.py  hf_export.py  holdouts.py  licensing.py  (+18 more)
tests/: conftest.py  test_alignment.py  test_canon.py  test_config.py  test_dataset.py  test_evaluate.py  test_family.py  test_greek.py  test_holdouts.py  test_licensing.py  test_manytomany.py  test_model.py  test_preprocess.py  test_probe.py  test_publish.py  test_publish_nllb.py  test_selection.py  test_sheets.py  test_splits.py  test_tokenizer.py  test_vref.py
webpages/: Sami Liedes – Data and general life geekery.html
(+15 files in other folders)
